# pho-code

./: .gitmodules  AGENTS.md  Cargo.toml  README.md
docs/: README.md  implementation-plan.md  native-harness-implementation-plan.md
docs/architecture/: app-server-protocol.md  chatgpt-codex-backend.md  compaction.md  deepseek-api-backend.md  gpui-workbench.md  native-harness-system.md  native-workbench-lifecycle.md  sessions.md  subagents.md  system.md  tools.md  user-terminal.md  workbench-workspaces.md
docs/assets/: pho-code.tldraw
docs/decisions/: 0001-codex-app-server-sidecar.md  0002-native-agent-harness.md  0003-deepseek-api-first-backend.md  0004-native-workbench-phase-6.md  0005-release-v1-and-defer-phase-6b.md  0006-chat-first-native-workbench.md
docs/implementation/: README.md  dependencies.md
docs/implementation/evidence/: phase-0-2026-07-14.md  phase-2-2026-07-15.md  phase-3-2026-07-15.md  phase-3b-2026-07-15.md  phase-4-2026-07-15.md  phase-5-2026-07-17.md  phase-6-release-candidate-2026-07-17.md  phase-6.1-progress-2026-07-17.md
docs/implementation/v1/: phase-0-foundation.md  phase-1-chatgpt-codex-qualification.md  phase-1b-deepseek-api-qualification.md  phase-2-headless-harness.md  phase-3-live-backend.md  phase-3b-terminal-tui.md  phase-4-tools.md  phase-5-sessions.md  phase-6-gpui.md
docs/implementation/v2/: README.md  phase-6b-native-completion.md  phase-6c-chat-first-ui-polish.md
docs/qualification/: README.md  chatgpt-codex-2026-07-14.md  deepseek-2026-07-14.md  deepseek-2026-07-15.md
docs/research/: codex-source-study.md  gpui-component-source-study.md  markdown-latex-rendering.md  pi-source-study.md  terminal-pty-source-study.md
packaging/macos/: Info.plist
scripts/: build-macos-app.sh
src/: lib.rs  main.rs  native.rs
src/agent/: context.rs  instructions.rs  loop_runtime.rs  mod.rs  types.rs
src/app/: action.rs  error.rs  git_inspection.rs  instance_lock.rs  markdown.rs  mod.rs  reducer.rs  runtime.rs  services.rs  state.rs  syntax.rs  terminal_surface.rs  transcript.rs  window_geometry.rs  workbench_controller.rs  workbench_focus.rs  workbench_lifecycle.rs  workbench_preferences.rs  workbench_services.rs  workbench_state.rs  workspace_inspection.rs
src/auth/: actor.rs  api_key.rs  keychain.rs  mod.rs  oauth.rs
src/backend/: chatgpt_codex.rs  deepseek.rs  mod.rs  profile.rs  scripted.rs  sse.rs  strict_json.rs
src/cli/: command.rs  context.rs  mod.rs  renderer.rs  terminal.rs  tui.rs
src/cli/tui/: driver.rs  (+2 more)
src/session/: artifacts.rs  catalog.rs  journal.rs  mod.rs  record.rs  recovery.rs
src/terminal/: mod.rs
src/tools/: approval.rs  mod.rs  output.rs  patch.rs  read.rs  search.rs  shell.rs  workspace.rs
src/ui/: composer.rs  fonts.rs  mod.rs  secure_input.rs  startup.rs  workbench_theme.rs
tests/: command_process.rs  deepseek_live.rs  doc_links.rs  foundation.rs  instance_lock_process.rs  keychain_macos.rs  phase2_headless.rs  phase3_live_backend.rs  phase4_tools.rs  phase5_command_process.rs  phase5_runtime.rs  phase5_session_store.rs  phase6_native_foundation.rs
tests/snapshots/: phase3b_gold_52x19.txt  phase3b_gold_96x17.txt
tests/support/: mod.rs
(+12 files in other folders)
